codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__approval_overlay__tests__approval_overlay_additional_permissions_macos_prompt.snap
---
source: tui_app_server/src/bottom_pane/approval_overlay.rs
expression: "render_overlay_lines(&view, 120)"
---

  要 运 行 以 下 命 令 吗 ？

  原 因 ： need macOS automation

  权 限 规 则 ： macOS 偏 好 设 置  读 写 ; macOS 自 动 化  com.apple.Calendar, com.apple.Notes; macOS 辅 助 功 能 ; macOS 日 历 ; macOS
  提 醒 事 项

  $ osascript -e 'tell application'

› 1. 是 ， 继 续  (y)
  2. 否 ， 并 告 诉  Codex 应 该 怎 么 做  (esc)

  按  enter 确 认 ， 或 按  esc 取 消
