codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__approval_overlay__tests__approval_overlay_additional_permissions_prompt.snap
---
source: tui_app_server/src/bottom_pane/approval_overlay.rs
expression: "normalize_snapshot_paths(render_overlay_lines(&view, 120))"
---

  要 运 行 以 下 命 令 吗 ？

  原 因 ： need filesystem access

  权 限 规 则 ： 网 络 ; 读 取  `/tmp/readme.txt`; 写 入  `/tmp/out.txt`

  $ cat /tmp/readme.txt

› 1. 是 ， 继 续  (y)
  2. 否 ， 并 告 诉  Codex 应 该 怎 么 做  (esc)

  按  enter 确 认 ， 或 按  esc 取 消
