codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__approval_overlay__tests__approval_overlay_cross_thread_prompt.snap
---
source: tui_app_server/src/bottom_pane/approval_overlay.rs
expression: "render_overlay_lines(&view, 80)"
---

  要 运 行 以 下 命 令 吗 ？

  线 程 ： Robie [explorer]

  $ echo hi

› 1. 是 ， 继 续  (y)
  2. 否 ， 并 告 诉  Codex 应 该 怎 么 做  (esc)

  按  enter 确 认 ， 或 按  esc 取 消  或 按  o 打 开 对 应 线 程
